-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.x, 5.9.2, 5.10.1
-
Windows, Qt 5.9.2
-
daa39f84996700d2459d8e570ac1b3f2f2cdffd0 (qtbase/5.11, 1.3.2018,5.11)
The size of the ToolTip box is not calculated correctly if font size is set in the style sheet. Also happens when the text is rich text. Attached will be a sample app with two buttons, both having own tooltips.
1.) The problem occurs, when you move the mouse slowly to a button.
2.) The tool tip is displayed correctly, when you move the mouse fast from one button to the other.
3.) The tool tip is displayed correctly, when no font size is set in the style sheet.
- is duplicated by
-
QTBUG-7874 QToolTip box doesn't resize properly with larger font
-
- Closed
-
-
QTBUG-26576 QToolTip does not correctly resize if a CSS style sheet is used and the font size is changed
-
- Closed
-
- relates to
-
QTBUG-67634 Windows: Tooltip sizing with style sheets truncating & inconsistent
-
- Reported
-
| For Gerrit Dashboard: QTBUG-64550 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 221421,4 | ToolTip/Windows: Fix wrong size when font is modified by widget stylesheet | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |